Support (vertical) font maps