@@ -3,6 +3,7 @@ package com.cavetale.cavetaleresourcepack;
 import com.cavetale.core.font.Font;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -16,14 +17,22 @@ public final class Fonts {
         json.setFile(pathMap.getOrDefault(file, file).toString() + ".png");
         json.setAscent(font.getAscent());
         json.setHeight(font.getHeight());
-        json.setChars(Arrays.asList("" + font.getCharacter()));
+        json.setChars(new ArrayList<>(List.of("" + font.getCharacter())));
         return json;
     }
 
     public static <E extends Enum<E> & Font> List<FontProviderJson> toList(Class<E> fontClass, Map<PackPath, PackPath> pathMap) {
         List<FontProviderJson> list = new ArrayList<>();
+        Map<String, FontProviderJson> filenameMap = new HashMap<>();
         for (Font it : fontClass.getEnumConstants()) {
-            list.add(toJson(it, pathMap));
+            FontProviderJson json = filenameMap.get(it.getFilename());
+            if (json != null) {
+                json.getChars().add("" + it.getCharacter());
+            } else {
+                json = toJson(it, pathMap);
+                list.add(json);
+                filenameMap.put(it.getFilename(), json);
+            }
         }
         return list;
     }
